--- a/write.html
+++ b/write.html
@@ -13,7 +13,7 @@
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Things To DO</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,7 +33,18 @@
         </div>
       </nav>
 
-      <h4>홈입니다.</h4>
+      <h4>기록해도 안할 거 알지만</h4>
+
+      <form>
+        <div class="form-group">
+            <label for="formGroupExampleInput">오늘의 할일</label>
+            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="오늘의 할일">
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlTextarea1">세부내용</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="세부내용"></textarea>
+        </div>
+      </form>
     
 
     <!-- Optional JavaScript; choose one of the two! -->
